// Code generated by mojo. DO NOT EDIT.

syntax = "proto3";

package armory.unitable;

import "armory/unitable/column.proto";
import "mojo/core/time.proto";
import "mojo/db/delete_time.proto";
import "mojo/mojo.proto";

option go_package = "github.com/ncraft-io/armory/go/pkg/armory/unitable;unitable";
option java_multiple_files = true;
option java_outer_classname = "TableProto";
option java_package = "io.ncraft.armory.unitable";

message Table {
    string id = 1;
    string name = 2 [(mojo.db_index)=""];
    string display_name = 3;
    string export_name = 4;
    string tenant = 5 [(mojo.db_index)=""];
    string database = 10 [(mojo.db_index)=""];
    repeated Column columns = 15 [(mojo.reference)=""];
    mojo.core.Timestamp create_time = 100;
    mojo.core.Timestamp update_time = 101;
    mojo.db.DeleteTime delete_time = 102;
}