// Code generated by mojo. DO NOT EDIT.

syntax = "proto3";

package armory.unitable.v1;

import "armory/unitable/column.proto";
import "armory/unitable/table.proto";
import "mojo/core/field_mask.proto";
import "mojo/core/null.proto";
import "mojo/core/ordering.proto";
import "mojo/core/value.proto";
import "mojo/mojo.proto";

option go_package = "github.com/ncraft-io/armory/go/pkg/armory/unitable/v1;unitable";
option java_multiple_files = true;
option java_outer_classname = "UnitableProto";
option java_package = "io.ncraft.armory.unitable.v1";

message CreateTableRequest {
    string database = 1;
    armory.unitable.Table table = 2;
}

message UpdateTableRequest {
    string database = 1;
    armory.unitable.Table table = 2;
    string id = 3;
}

message GetTableRequest {
    string database = 1;
    string id = 2;
}

message ListTablesRequest {
    string database = 1;
    int32 page_size = 2000;
    string page_token = 2001;
    int32 skip = 2002;
    string filter = 2011;
    mojo.core.Ordering order = 2012;
    mojo.core.FieldMask field_mask = 2013;
    bool unique = 2014;
}

message ListTablesResponse {
    repeated armory.unitable.Table tables = 1;
    int32 total_count = 2000;
    string next_page_token = 2001;
}

message DeleteTableRequest {
    string database = 1;
    string id = 2;
    bool force = 3;
}

message SyncTableRequest {
    string database = 1;
    string id = 2;
}

message CreateColumnRequest {
    string database = 1;
    string table = 2;
    armory.unitable.Column column = 3;
}

message UpdateColumnRequest {
    string database = 1;
    string table = 2;
    armory.unitable.Column column = 3;
    string id = 4;
}

message GetColumnRequest {
    string database = 1;
    string table = 2;
    string id = 3;
}

message DeleteColumnRequest {
    string database = 1;
    string table = 2;
    string id = 3;
}

message ListColumnsRequest {
    string database = 1;
    string table = 2;
    int32 page_size = 2000;
    string page_token = 2001;
    int32 skip = 2002;
    string filter = 2011;
    mojo.core.Ordering order = 2012;
    mojo.core.FieldMask field_mask = 2013;
    bool unique = 2014;
}

message ListColumnsResponse {
    repeated armory.unitable.Column columns = 1;
    int32 total_count = 2000;
    string next_page_token = 2001;
}

message BatchCreateColumnsRequest {
    string database = 1;
    string table = 2;
    repeated armory.unitable.Column columns = 3;
}

message BatchUpdateColumnRequest {
    string database = 1;
    string table = 2;
    repeated armory.unitable.Column columns = 3;
}

message BatchDeleteColumnRequest {
    string database = 1;
    string table = 2;
    repeated string ids = 3;
}

message CreateRowRequest {
    string database = 1;
    string table = 2;
    mojo.core.Object row = 3;
}

message UpdateRowRequest {
    string database = 1;
    string table = 2;
    string id = 3;
    mojo.core.Object row = 4;
}

message GetRowRequest {
    string database = 1;
    string table = 2;
    string id = 3;
}

message DeleteRowRequest {
    string database = 1;
    string table = 2;
    string id = 3;
}

message ListRowRequest {
    string database = 1;
    string table = 2;
    int32 page_size = 2000;
    string page_token = 2001;
    int32 skip = 2002;
    string filter = 2011;
    mojo.core.Ordering order = 2012;
    mojo.core.FieldMask field_mask = 2013;
    bool unique = 2014;
}

message ListRowResponse {
    repeated mojo.core.Object objects = 1;
    int32 total_count = 2000;
    string next_page_token = 2001;
}

message ExportRowRequest {
    string database = 1;
    string table = 2;
    int32 page_size = 2000;
    string page_token = 2001;
    int32 skip = 2002;
    string filter = 2011;
    mojo.core.Ordering order = 2012;
    mojo.core.FieldMask field_mask = 2013;
    bool unique = 2014;
}

message ExportRowResponse {
    repeated mojo.core.Object objects = 1;
    int32 total_count = 2000;
    string next_page_token = 2001;
}

message BatchCreateRowsRequest {
    string database = 1;
    string table = 2;
    repeated mojo.core.Object rows = 3;
}

message BatchUpdateRowsRequest {
    string database = 1;
    string table = 2;
    repeated mojo.core.Object rows = 4;
}

message BatchDeleteRowsRequest {
    string database = 1;
    string table = 2;
    repeated string ids = 3;
}

service Unitable {
    rpc create_table(CreateTableRequest) returns (armory.unitable.Table);
    rpc update_table(UpdateTableRequest) returns (mojo.core.Null);
    rpc get_table(GetTableRequest) returns (armory.unitable.Table);
    rpc list_tables(ListTablesRequest) returns (ListTablesResponse);
    rpc delete_table(DeleteTableRequest) returns (mojo.core.Null);
    rpc sync_table(SyncTableRequest) returns (armory.unitable.Table);
    rpc create_column(CreateColumnRequest) returns (armory.unitable.Column);
    rpc update_column(UpdateColumnRequest) returns (mojo.core.Null);
    rpc get_column(GetColumnRequest) returns (armory.unitable.Column);
    rpc delete_column(DeleteColumnRequest) returns (mojo.core.Null);
    rpc list_columns(ListColumnsRequest) returns (ListColumnsResponse);
    rpc batch_create_columns(BatchCreateColumnsRequest) returns (mojo.core.Null);
    rpc batch_update_column(BatchUpdateColumnRequest) returns (mojo.core.Null);
    rpc batch_delete_column(BatchDeleteColumnRequest) returns (mojo.core.Null);
    rpc create_row(CreateRowRequest) returns (mojo.core.Object);
    rpc update_row(UpdateRowRequest) returns (mojo.core.Null);
    rpc get_row(GetRowRequest) returns (mojo.core.Object);
    rpc delete_row(DeleteRowRequest) returns (mojo.core.Null);
    rpc list_row(ListRowRequest) returns (ListRowResponse);
    rpc export_row(ExportRowRequest) returns (ExportRowResponse);
    rpc batch_create_rows(BatchCreateRowsRequest) returns (mojo.core.Null);
    rpc batch_update_rows(BatchUpdateRowsRequest) returns (mojo.core.Null);
    rpc batch_delete_rows(BatchDeleteRowsRequest) returns (mojo.core.Null);
}